Closed Bug 1727371 Opened 3 years ago Closed 3 years ago

Firefox uses a light background on startup with system theme and an OS dark theme

Categories

(Core :: Widget: Gtk, defect)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: sdk, Assigned: emilio)

Details

Attachments

(3 files)

STR:

  1. Set a dark theme for your OS (e.g Adwaita-dark)
  2. Set "system theme" in Firefox
  3. Close and re-open Firefox

AB:

There's a small delay before the chrome UI is completely loaded and during that time Firefox uses a light color (white) for the background instead of a dark color.

EB:

It should use a dark color.

Additional information:

According to mozregression (see link below) it has been introduced by bug 1707957. However, I only got that issue around the time where Proton was released and that some clean up have been done to remove the pre-Proton code. So the clean up may have broken the patch in the bug mentioned above.

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=365bfc91ddd5d9be1a5d5bee72377c025b099321&tochange=a57a18bd5034b718955a35fecea22727d556e35f

Flags: needinfo?(emilio)

Hmm, I don't see this on Fedora 34 (tried two different machines, with pretty much a stock wayland setup). Are you using x11 or wayland?

From the video I see you're using Gnome with perhaps some sort of tiling extension or something, can you elaborate on how can I get to repro this?

Flags: needinfo?(emilio) → needinfo?(contact)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

Hmm, I don't see this on Fedora 34 (tried two different machines, with pretty much a stock wayland setup). Are you using x11 or wayland?
From the video I see you're using Gnome with perhaps some sort of tiling extension or something, can you elaborate on how can I get to repro this?

OS: Fedora 34
Window Manager: bspwm
Display Server: x11

I've also attached the output of about:support. And, I do use a userChrome.css but I disabled it and was able to reproduce the issue.

Flags: needinfo?(contact)
Attached file about-support.txt

Thanks, will try to repro with that WM.

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bb30adfdd26d
Use the right color scheme for default background/color lookup on chrome docs. r=mstange
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: