Bug 1727371 - Use the right color scheme for default background/color lookup on chrome docs. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D124059